--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "server",
+  "name": "messenger-app-server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "license": "MIT",
   "dependencies": {
